Create Landing Page script and logic

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
       <nav class="nav">
         <img
           src="img/logo.png"
-          alt="Bankist logo"
+          alt="QBank logo"
           class="nav__logo"
           id="logo"
-          designer="Jonas"
+          designer="Felix"
           data-version-number="3.0"
         />
         <ul class="nav__links">
