--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
             <a class="nav__link" href="#section--3">Testimonials</a>
           </li>
           <li class="nav__item">
+            <a class="nav__link nav-login" href="portal.html">Login</a>
+          </li>
+          <li class="nav__item">
             <a class="nav__link nav__link--btn btn--show-modal" href="#"
               >Open account</a
             >
