--- a/portal.html
+++ b/portal.html
@@ -16,8 +16,10 @@
   </head>
   <body>
     <!-- TOP NAVIGATION -->
-    <nav>
-      <img src="img/logo.png" alt="QBank Logo" class="logo" />
+    <nav class="nav">
+      <a href="index.html"
+        ><img src="img/logo.png" alt="QBank Logo" class="logo"
+      /></a>
       <p class="welcome"></p>
     </nav>
 
